manifest/web_server/base/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: web-server
spec:
  replicas: 3
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    spec:
      containers:
        - name: nginx
          image: web-server:latest
          ports:
            - containerPort: 80
              name: http-web-server
