manifest/web_server/base/service.yml
apiVersion: v1
kind: Service

metadata:
  name: web-server
spec:
  type: LoadBalancer
  ports: 
    - port: 80
      targetPort: http-web-server
